--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <section class="sign-up">
 <div class="square">
     <div class="sign-up-div">
-        <h4>Clall to action it's time</h4>
+        <h4>Call to action it's time</h4>
     <p>Sign up for our products by clicking that buttom right over there</p>
 </div>
 <button>SIGN UP</button>
