fix on mobile responsivness

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&family=Gloock&family=Playball&family=Tilt+Neon&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="css/styles.css">
     
     <title>Rose Blossom</title>
@@ -16,9 +16,10 @@
     <header>
         <ul>
 <li class="li-logo"><a class ="li-logo" href="#">Rose Blossom</a></li>
-<li><a href="">About</a></li>
-<li><a href="">Shop</a></li>
-<li><a href="">Gallery</a></li>
+<li class="hidden"><a href="">About</a></li>
+<li class="hidden"><a href="">Shop</a></li>
+<li class="hidden"><a href="">Gallery</a></li>
+<li class="hamburger"> <a href=""><i class="fa fa-bars"></i></a></li>
     </ul>
 </header>
 <section class="main-section">
