--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </section>
 
 <section class="quote">
-        <h3>I'm a rose among the concrete, until this bleak city becomes filled with color. I'll keep my head up and stand my ground until they get drunk off of my scent and smile.</h3>
-        <span>- H1-KEY</span>
+        <h3> “But he that dares not grasp the thorn. Should never crave the rose.”</h3>
+        <span>– Anne Bronte</span>
 </section>
 
 <section class="sign-up">
